2004-03-10  Dominique Devriese  <devriese@kde.org>

	* Don't mess up the order of given objects in a macro
	construction.

2004-03-09  Dominique Devriese  <devriese@kde.org>

	* Fix the macro system to reject macro's where not all of the
	given objects are used.

	* Fix the macro system to properly check whether the final objects
	depend on the given objects, and fix a problem with the wrong
	object being selected as the final object in some rare cases.

2004-03-06  Dominique Devriese  <devriese@kde.org>

	* Incorporate a patch by Pino Toscano adding some unfinished work
	on a Dr.Geo import filter.  It's not finished yet, and also not
	visible in the UI yet.

	* Fix the ObjectHierarchy::resultDoesNotDependOnGiven() function
	to do something much less stupid than before.  It still only
	checks if one of the result objects does not depend on the given
	objects, it needs to be changed to properly check whether all the
	result objects depend on the given objects.

	* Fix the ObjectHierarchy class to generate a correct hierarchy 
	when a result object depends on another object that does not 
	depend on the given objects.

2004-02-24  Dominique Devriese  <devriese@kde.org>

	* Make the tests stuff generate a proper text label with 
	property calcers instead of a normal calcer as rest arguments.

	* Make the configure.in.in stuff properly detect python on RH
	-> many thanks to Maurizio for helping me with this.

	* Fix some problems with the useText, that were introduced with 
	the new tests stuff.

2004-02-23  Dominique Devriese  <devriese@kde.org>

	* Add a ContainsTestType, testing whether a given point is on a
	given curve.

2004-02-17  Dominique Devriese  <devriese@kde.org>

	* Add the possibility to give an item a custom color in the 
	  popup dialog.

2004-02-16  Dominique Devriese  <devriese@kde.org>

	* make the usetext in TestConstructMode also appear for all other
	arguments than the last one

2004-02-15  Dominique Devriese  <devriese@kde.org>
