@@ -1,3 +1,8 @@
+2004-03-15  Dominique Devriese  <devriese@kde.org>
+
+	* misc/coordinate_system.cpp: add a simple "Invisible" Coordinate
+	system, showing no axes or grid at all.
+
 2004-03-10  Dominique Devriese  <devriese@kde.org>
 
 	* Don't mess up the order of given objects in a macro
